--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "chai": "^4.3.6",
     "ethereum-waffle": "^3.4.4",
     "ethers": "^5.6.9",
-    "hardhat": "^2.9.9"
+    "hardhat": "^2.9.9",
+    "reinstall-node-modules": "^2.0.0"
   }
 }
