bug - Not display result ticket and list winner

--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "npx hardhat run scripts/deploy.js --network rinkeby"
+    "deployContract": "npx hardhat run scripts/deployContract.js --network rinkeby",
+    "deployToken": "npx hardhat run scripts/deployToken.js --network rinkeby"
+
   },
   "eslintConfig": {
     "extends": [
