--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "hardhat-ethers": "^1.0.1",
+    "hardhat-etherscan": "^1.0.1",
+    "hardhat-upgrades": "^0.0.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
@@ -23,7 +26,6 @@
     "eject": "react-scripts eject",
     "deployContract": "npx hardhat run scripts/deployContract.js --network rinkeby",
     "deployToken": "npx hardhat run scripts/deployToken.js --network rinkeby"
-
   },
   "eslintConfig": {
     "extends": [
